--- a/sushishop/src/App.css
+++ b/sushishop/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+.photoHead{
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 650px;
+  opacity: 0.8;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
